# api/main.go
@@ -85,6 +85,7 @@ func main() {
 
 	e.GET("/docs/*", echoSwagger.WrapHandler)
 	e.POST("/signup", h.SignUp)
+	e.POST("/signin", h.SignIn)
 	e.GET("/users", h.GetUserList)
 	e.DELETE("/users", h.RemoveUsers)
 	e.GET("/user", h.GetUserData, middlewares.AuthMiddleware())
